# internet_store_project

./: .env.sample  .gitignore  dump.rdb  groups.json  pyproject.toml  readme.md
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_postauthor_blogpost_author.py  0003_alter_blogpost_is_published.py
blog/templates/blog/: base.html  blog_form.html  post_confirm_delete.html  post_detail.html  posts_list.html
blog/templates/blog/includes/: control_panel_buttons.html  navigation.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json  categories.json  product_data.json  products.json
catalog/management/commands/: clear_all_data.py  delete_all.py  load_from_fixture.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_options_product_owner_and_more.py
catalog/templates/: base.html  category_form.html  confirm.html  contacts.html  edit_product_list.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  products_in_category.html  products_list.html
catalog/templates/includes/: control_panel_buttons.html  navigation.html
config/: settings.py  urls.py
static/js/: bootstrap.bundle.min.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_super.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py
users/templates/users/: login.html  register.html
