[tool.poetry]
name = "22-screencast"
version = "0.1.0"
description = ""
authors = ["Dmitry Minin <d.n.minin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"
pillow = "^11.1.0"
black = "^25.1.0"
ipython = "^9.1.0"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
